--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <center>
 
         <header>
-            <img src="Waffle-labs-logo-main.jpeg" alt="Waffle labs logo" />
+            <img src="logo.jpeg" alt="Waffle labs logo" />
             <h1>Welcome to Waffle Labs</h1>
             <a href="https://www.youtube.com/watch?v=RPPNzt9M16M">Youtube Channel Latest</a>
         </header>
