--- a/409.html
+++ b/409.html
@@ -20,18 +20,19 @@
 
         <h1>409</h1>
         <h2> Please try again later </h2>
-        <p>The W.A.F.F.L.E Labs redirectory Home Page is under maintenance due too overwling issues our code has </p>
-        <p>Hello! as we are getting closer to the full release of the website and some extra items. for anyone whom
-            wants to know, us here at waffle are getting so excited to meet you! </p>
+        <p>The W.A.F.F.L.E Labs redirectory Home Page is under maintenance due to issues our code has. </p>
+        <p>Hello! As we are getting closer to the full release of the website and some extra items, for anyone who
+            wants to know, us here at W.A.F.F.L.E are getting so excited to meet you! </p>
         <center> <a href="index.html"><button>Home</button></a>
         </center>
 
 
         <center>
             <p>
-            <h3>contact us at Waffleinq@gmail.com<h3>
-                    </p>
-                    <center>
+            <h3>contact us at <a href="mailto:waffleinq@gmail.com">waffleinq@gmail.com</a></h3>
+            </p>
+        </center>
+    </center>
 </body>
 
 </html>
