--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Waffle Labs | Home</title>
+    <title>W.A.F.F.L.E Labs | Home</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
@@ -15,13 +15,12 @@
 
         <header>
             <img src="logo.jpeg" alt="Waffle labs logo" />
-            <h1>Welcome to Waffle Labs</h1>
+            <h1>Welcome to W.A.F.F.L.E Labs</h1>
             <a href="https://www.youtube.com/watch?v=RPPNzt9M16M">Youtube Channel Latest</a>
         </header>
 
 
-        <p>Click the button below to log into the W.A.F.F.L.E Labs re directory system </p>
-        <center>
+        <p>Click the button below to log into the W.A.F.F.L.E Labs redirectory system </p>
             <a href="login.html"><button>Sign
                     in</button></a>
             <a href="blog.html"><button>Blog</button></a>
@@ -34,13 +33,11 @@
             <a href="lore.html"><button>Update</button></a>
 
             <a alt=Live Archive href=https://www.youtube.com/playlist?list=PLTzuaigeJL4ycboj8EER0r5HntEqudiHM>
-                <button>Live Arc</button></a>
+                <button>Live Archive</button></a>
 
             <body>
                 <footer>
-                    <center>
-                        <p>For buisiness inquries contact us at waffleinq@gmail.com </p>
-                    </center>
+                        <p>For business inquries, contact us at waffleinq@gmail.com </p>
                 </footer>
             </body>
 
