--- a/blog.html
+++ b/blog.html
@@ -16,47 +16,47 @@
 
         <a href="index.html"><button>Home?</button></a>
 
-        <h4> Welcome too W.A.F.F.L.E! </h4>
+        <h4> Welcome to W.A.F.F.L.E! </h4>
 
-        <h5> written by jane </h5>
-        <h4>Welcome too waffle reader! Im jane here at the labs and im the head scientist and blog runner! I hope you
+        <h5> Written by Jane </h5>
+        <h4>Welcome to W.A.F.F.L.E, reader! I'm Jane here at the labs and I'm the head scientist and blog runner! I hope you
             enjoy
-            your time at waffle we are trying our best currently to get the site up and running!
+            your time at W.A.F.F.L.E. We are trying our best currently to get the site up and running!
             -Jane </h4>
 
         <p> ----------------------</p>
 
         <h4> What We Do Here</h4>
-        <h5> written by Little </h5>
-        <h4> Hello veiwer[s] welcome too W.A.F.F.L.E Labs. W.A.F.F.L.E stands for world artificial fun fair life
-            experimentation. We do experiments for realitys sake. Everything we do here is for the better of the world
+        <h5> Written by Little </h5>
+        <h4> Hello viewer[s], welcome to W.A.F.F.L.E Labs. W.A.F.F.L.E stands for World Artificial Fun Fair Life
+            Experimentation. We do experiments for reality's sake. Everything we do here is for the better of the world
             like
-            project 'S', fridge, T.U.S.A, TSAS, ect. We do hope you stay around. </h4>
+            Project 'S', Fridge, T.U.S.A, TSAS, ect. We do hope you stay around. </h4>
 
 
         <p> -------------------</p>
 
-        <h4> Jame's intro </h4>
+        <h4> James' Intro </h4>
 
         <h5> Written by James </h5>
 
-        <h4> Hello i am james the head cord' master here at waffle[along with email runner at waffleinq@gmail.com email
-            me!]. But if you ever need any info email me and i will help you. [btw were looking for sponsors for the
-            website
-            and when we get some we will expand our data base!] </h4>
+        <h4> Hello I am James the head cord' master here at W.A.F.F.L.E [along with email runner at waffleinq@gmail.com. Email
+            me!]. If you ever need any info email me and I will help you. [BTW, we're looking for sponsors for the
+            website, 
+            and when we get some we will expand our database!] </h4>
 
         <p>------------------</p>
 
 
-        <h4> Our experiment </h4>
+        <h4> Our Experiment </h4>
 
-        <h5> written by le the scientiat </h5>
+        <h5> Written by Lee the Scientist </h5>
 
-        <h4> hello welcome to the science department more info too come!-3/25/1999
+        <h4> Hello, welcome to the science department. More info to come! -3/25/1999
 
 
-            3/27/1999- Welcome too the science department! here we run the tests and the experiments. now you might be
-            asking are those the same, yes, yes they are the boss just wanted too get the point acrossed. -lee a lead
+            3/27/1999- Welcome to the science department! Here we run the tests and the experiments. Now you might be
+            asking: "Are those the same?" Yes, yes they are. The boss just wanted too get the point across. -Lee, a lead
             Scientist</h4>
 
 
@@ -69,19 +69,19 @@
 
         </p>
         <h4>"Shh don't tell them, but I hacked into the blog to make my own post. I'm a sentient ice cube that is
-            made of an unknown element, I'm figuring it out but please don't tell silly or the scientists about
+            made of an unknown element, I'm figuring it out but please don't tell Silly or the scientists about
             this"</h4>
         <img src="theking.jpg" alt='King' />
         </p>
 
         <p> ---------------------</p>
         <p> 06/7/2000 </p>
-        <p>please im desprate, emaaaaail meeeeeeeeeeeeeeeeeee pleeeeeease {Waffleinq@gmail.com}
+        <p>Please I'm desperate, emaaaaail meeeeeeeeeeeeeeeeeee pleeeeeease [Waffleinq@gmail.com]
             -james</p>
         <p>-------------------------</p>
         <p> 08/6/2000</p>
-        <p> Hey yall see this theroy? its crazy now for our sake dont pay attention to the group they call
-            the eye please for all of use here tryin to help yall.
+        <p> Hey y'all see this theory? It's crazy, now for our sake don't pay attention to the group they call
+            The Eye please for all of us here trying to help y'all.
             -Camera man</p>
         <p> -----------------------</p>
         <p> [REDACTED]</p>
