--- a/409.html
+++ b/409.html
@@ -18,11 +18,9 @@
 <body>
     <center>
 
-        <h1>409</h1>
+        <h1>404</h1>
         <h2> Please try again later </h2>
-        <p>The W.A.F.F.L.E Labs redirectory Home Page is under maintenance due too overwling issues our code has </p>
-        <p>Hello! as we are getting closer to the full release of the website and some extra items. for anyone whom
-            wants to know, us here at waffle are getting so excited to meet you! </p>
+        <p>The W.A.F.F.L.E Labs redirectory We are on phase 1 of full release. We Are very ecited to meet you! </p>
         <center> <a href="index.html"><button>Home</button></a>
         </center>
 
