--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 
     <title>W.A.F.F.L.E Labs | Home</title>
     <link rel="stylesheet" href="style.css" />
+    <style>
+        body {
+            color: #32CD32;
+            background-color: black;
+        }
+
+        p{ 
+            color:#32CD32;
+        }
+    </style>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 
