--- a/409.html
+++ b/409.html
@@ -20,7 +20,7 @@
 
         <h1>404</h1>
         <h2> Please try again later </h2>
-        <p>The W.A.F.F.L.E Labs redirectory We are on phase 1 of full release. We Are very ecited to meet you! </p>
+        <p>The W.A.F.F.L.E Labs redirectory: We are on phase 1 of full release. We are very excited to meet you! </p>
         <center> <a href="index.html"><button>Home</button></a>
         </center>
 
