--- a/409.html
+++ b/409.html
@@ -28,6 +28,7 @@
         <center>
             <p>
             <h3>contact us at <a href="mailto:waffleinq@gmail.com">waffleinq@gmail.com</a></h3>
+           <style> [data-custom-class='body'], [data-custom-class='body'] * { background: transparent !important; } [data-custom-class='title'],
             </p>
         </center>
     </center>
