--- a/409.html
+++ b/409.html
@@ -2,35 +2,32 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            background-color: #f71d1d;
-        }
-    </style>
+    <link rel="stylesheet" href="status.css">
 
 
-    <title> 409 </title>
+    <title> Status </title>
 
     </style>
 </head>
 
 <body>
-    <center>
 
-        <h1>404</h1>
-        <h2> Please try again later </h2>
-        <p>The W.A.F.F.L.E Labs redirectory: We are on phase 1 of full release. We are very excited to meet you! </p>
-        <center> <a href="index.html"><button>Home</button></a>
-        </center>
-
-
-        <center>
-            <p>
-            <h3>contact us at <a href="mailto:waffleinq@gmail.com">waffleinq@gmail.com</a></h3>
-            </p>
-        </center>
-    </center>
+    <body>
+        <div class="nav">
+            <ul class="nav-list">
+                <li style="padding-right: 30px;"><a href="index.html">Home</a></li>
+                <li><a href="login.html">Sign In</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="409.html">Status</a></li>
+                <li><a href="tss.html">TSS</a></li>
+                <li><a href="https://youtube.com/shorts/KVqG55Zg2CE">JJ</a></li>
+                <li><a href="https://www.youtube.com/playlist?list=PLTzuaigeJL4ycboj8EER0r5HntEqudiHM">Archive</a></li>
+            </ul>
+        </div>
+        <h1>503 Service Unavailable</h1>
+        <h2> The server is currently unable to handle the request due to active maintenance. </h2>
+        <h1>Status: We are on phase 1 of full release. </h1>
+            <h3>For questions or concerns, contact us at <a href="mailto:waffleinq@gmail.com">waffleinq@gmail.com</a></h3>
 </body>
 
 </html>
