--- a/blog.html
+++ b/blog.html
@@ -2,50 +2,61 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="blog.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
-        <h3>Waffle Labs Blog</h3>
-    </header>
-    <div id="content">
+
+    <body>
+        <div class="nav">
+            <ul class="nav-list">
+                <li style="padding-right: 30px;"><a href="index.html">Home</a></li>
+                <li><a href="login.html">Sign In</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="409.html">Status</a></li>
+                <li><a href="tss.html">TSS</a></li>
+                <li><a href="https://youtube.com/shorts/KVqG55Zg2CE">JJ</a></li>
+                <li><a href="https://www.youtube.com/playlist?list=PLTzuaigeJL4ycboj8EER0r5HntEqudiHM">Archive</a></li>
+            </ul>
+        </div>
+    <div class="content">
         <h4> We will upload every day! </h4>
 
-        <p>-----------------------</p>
+        <hr>
 
-        <a href="index.html"><button>Home?</button></a>
 
-        <h4> Welcome to W.A.F.F.L.E! </h4>
+        <h4> Welcome to WAFFLE Labs! </h4>
 
         <h5> Written by Jane </h5>
-        <h4>Welcome to W.A.F.F.L.E, reader! I'm Jane here at the labs and I'm the head scientist and blog runner! I hope you
+        <h4>Welcome to WAFFLE Labs, reader! I'm Jane here at the labs and I'm the head scientist and blog runner! I hope
+            you
             enjoy
-            your time at W.A.F.F.L.E. We are trying our best currently to get the site up and running!
+            your time at WAFFLE Labs. We are trying our best currently to get the site up and running!
             -Jane </h4>
 
-        <p> ----------------------</p>
+        <hr>
 
         <h4> What We Do Here</h4>
         <h5> Written by Little </h5>
-        <h4> Hello viewer[s], welcome to W.A.F.F.L.E Labs. W.A.F.F.L.E stands for World Artificial Fun Fair Life
+        <h4> Hello viewer[s], welcome to WAFFLE Labs. WAFFLE stands for World Artificial Fun Fair Life
             Experimentation. We do experiments for reality's sake. Everything we do here is for the better of the world
             like
             Project 'S', Fridge, T.U.S.A, TSAS, ect. We do hope you stay around. </h4>
 
 
-        <p> -------------------</p>
+        <hr>
 
         <h4> James' Intro </h4>
 
         <h5> Written by James </h5>
 
-        <h4> Hello I am James the head cord' master here at W.A.F.F.L.E [along with email runner at waffleinq@gmail.com. Email
+        <h4> Hello I am James the head cord' master here at WAFFLE Labs [along with email runner at waffleinq@gmail.com.
+            Email
             me!]. If you ever need any info email me and I will help you. [BTW, we're looking for sponsors for the
-            website, 
+            website,
             and when we get some we will expand our database!] </h4>
 
-        <p>------------------</p>
+        <hr>
 
 
         <h4> Our Experiment </h4>
@@ -60,7 +71,7 @@
             Scientist</h4>
 
 
-        <p> --------------------</p>
+        <hr>
         <p> 05/4/2000 </p>
         <h4> SHHHHHHHHHHH </h4>
 
@@ -74,16 +85,16 @@
         <img src="theking.jpg" alt='King' />
         </p>
 
-        <p> ---------------------</p>
+        <hr>
         <p> 06/7/2000 </p>
         <p>Please I'm desperate, emaaaaail meeeeeeeeeeeeeeeeeee pleeeeeease [Waffleinq@gmail.com]
             -james</p>
-        <p>-------------------------</p>
+        <hr>
         <p> 08/6/2000</p>
         <p> Hey y'all see this theory? It's crazy, now for our sake don't pay attention to the group they call
             The Eye please for all of us here trying to help y'all.
             -Camera man</p>
-        <p> -----------------------</p>
+        <hr>
         <p> [REDACTED]</p>
         <p> <img src="thefogiscoming.png" alt='The Fog Is Coming' /> </p>
         <p> The Fog Is Coming</p>
@@ -92,10 +103,10 @@
         <p> The Fog Is Coming</p>
         <p> The Fog Is Coming</p>
         <p> The Fog Is Coming</p>
-    <p> ------------------------</p>
+        <hr>
         <p>SGVsbG8=</p>
-       V2VsY29tZSBXZSBhcmUgdGhlIEUuWS5FIFdlIGFyZSBoZXJlIHRvIHdhcm4geW91LCBkb250IGxpc3RlbiB0byBhbnlvbmUsIHdlIHdpbGwgc2VlIHlvdSB2ZXJ5IHNvb24u
-        <p> ------------------------</p>
+        V2VsY29tZSBXZSBhcmUgdGhlIEUuWS5FIFdlIGFyZSBoZXJlIHRvIHdhcm4geW91LCBkb250IGxpc3RlbiB0byBhbnlvbmUsIHdlIHdpbGwgc2VlIHlvdSB2ZXJ5IHNvb24u
+        <hr>
     </div>
 </body>
 
