--- a/index.html
+++ b/index.html
@@ -1,54 +1,42 @@
 <!DOCTYPE html>
 <html>
+<!--  -->
 
 <head>
-
-    <title>W.A.F.F.L.E Labs | Home</title>
+    <title>
+        WAFFLE Labs
+    </title>
     <link rel="stylesheet" href="style.css" />
-    <style>
-        body {
-            color: #32CD32;
-            background-color: black;
-        }
-
-        p{ 
-            color:#32CD32;
-        }
-    </style>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <center>
+    <div class="nav">
+        <ul class="nav-list">
+            <li style="padding-right: 30px;"><a href="index.html">Home</a></li>
+            <li><a href="login.html">Sign In</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="409.html">Status</a></li>
+            <li><a href="tss.html">TSS</a></li>
+            <li><a href="https://youtube.com/shorts/KVqG55Zg2CE">JJ</a></li>
+            <li><a href="https://www.youtube.com/playlist?list=PLTzuaigeJL4ycboj8EER0r5HntEqudiHM">Archive</a></li>
+        </ul>
+    </div>
 
-        <header>
-            <img src="logo.jpeg" alt="Waffle labs logo" />
-            <h1>Welcome to W.A.F.F.L.E Labs</h1>
-            <a href="https://www.youtube.com/watch?v=RPPNzt9M16M">Youtube Channel Latest</a>
-        </header>
 
+    <h1>
+        Welcome to WAFFLE Labs
+    </h1>
+    <div class="content">
+        <p>
+            Use the buttons on the navigation bar to access our re-directory system. For business inquries, please
+            contact us at waffleinq@gmail.com.
+        </p>
 
-        <p>Click the button below to log into the W.A.F.F.L.E Labs redirectory system </p>
-            <a href="login.html"><button>Sign
-                    in</button></a>
-            <a href="blog.html"><button>Blog</button></a>
-            <a href="409.html"><button>Status</button></a>
+    </div>
 
-            <a href="tss.html"><button>TSS</button></a>
-
-            <a alt=placeholder href=https://youtube.com/shorts/KVqG55Zg2CE> <button>JJ</button></a>
-
-            <a href="lore.html"><button>Update</button></a>
-
-            <a alt=Live Archive href=https://www.youtube.com/playlist?list=PLTzuaigeJL4ycboj8EER0r5HntEqudiHM>
-                <button>Live Archive</button></a>
-
-            <body>
-                <footer>
-                        <p>For business inquries, contact us at waffleinq@gmail.com </p>
-                </footer>
-            </body>
+</body>
 
 </html>
