--- a/wubs/index.html
+++ b/wubs/index.html
@@ -4,6 +4,7 @@
         <title>flicky links</title>
     </head>
     <body>
-
+        <iframe src="https://jemi.so/wubs">
+        </iframe>
     </body>
 </html>
