--- a/wubs/index.html
+++ b/wubs/index.html
@@ -458,14 +458,11 @@
                             style="text-align:center">
                             <div class="linkitem_iconContainer__FtMnp" data-active="true" data-block="true"><img
                                 src="https://media0.giphy.com/media/Azqhhmm7mpm3RtiKvC/giphy.gif?cid=59ccf1a4elqvpj2t2et4bilemvwozt8fadvb6914y931tfp8&amp;rid=giphy.gif&amp;ct=s"
-                                class="linkitem_imageIcon__YbCxg" style="object-fit:contain;text-align:center" /></div>
+                                class="linkitem_imageIcon__YbCxg" style="object-fit:contain;text-align:left" width=35px; height=35px;/></div>
                             <div class="flex-fill">
                               <div style="text-align:center" class="LinkItem__ThemedLinkText-sc-1igox4t-1 kwRUTp">
                                 Footsteps</div>
                             </div>
-                            <div class="linkitem_iconContainer__FtMnp" data-active="false" data-block="true"><img
-                                src="https://media0.giphy.com/media/Azqhhmm7mpm3RtiKvC/giphy.gif?cid=59ccf1a4elqvpj2t2et4bilemvwozt8fadvb6914y931tfp8&amp;rid=giphy.gif&amp;ct=s"
-                                class="linkitem_imageIcon__YbCxg" style="object-fit:contain;text-align:center" /></div>
                           </div>
                         </a></div>
                     </div>
