--- a/wubs/index.html
+++ b/wubs/index.html
@@ -59,8 +59,8 @@
     content="The modern website builder for creatives, entrepreneurs, and dreamers. Build a beautiful link-in-bio site, portfolio, or landing page in minutes. Monetization, blogging, and more all built-in for free." />
   <title>flicky</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="https://jemi.so/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.ico" />
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="manifest" href="/manifest.json" />
   <meta name="next-head-count" content="13" />
@@ -458,7 +458,7 @@
                             style="text-align:center">
                             <div class="linkitem_iconContainer__FtMnp" data-active="true" data-block="true"><img
                                 src="https://media0.giphy.com/media/Azqhhmm7mpm3RtiKvC/giphy.gif?cid=59ccf1a4elqvpj2t2et4bilemvwozt8fadvb6914y931tfp8&amp;rid=giphy.gif&amp;ct=s"
-                                class="linkitem_imageIcon__YbCxg" style="object-fit:contain;text-align:left" width=35px; height=35px;/></div>
+                                class="linkitem_imageIcon__YbCxg" style="object-fit:contain;text-align:left" width=40px; height=40px;/></div>
                             <div class="flex-fill">
                               <div style="text-align:center" class="LinkItem__ThemedLinkText-sc-1igox4t-1 kwRUTp">
                                 Footsteps</div>
