--- a/wubs/index.html
+++ b/wubs/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <link rel="favicon" href="/wubs/assets/favicon.ico" />
-  <link rel="stylesheel" href="/wubs/stylesheet.css" />
+  <head>
+    <link rel="favicon" href="/wubs/assets/favicon.ico" />
+    <link rel="stylesheel" href="/wubs/stylesheet.css" />
+  </head>
+  <body>
+    <header clas="header">
+      <div class="pageTitle">
+        <h4>flicky</h4>
+      </div>
+    </header>
+  </body>
 </html>
