--- a/wubs/index.html
+++ b/wubs/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <link rel="favicon" href="/wubs/assets/favicon.ico" />
-    <link rel="stylesheel" href="/wubs/stylesheet.css" />
+    <link rel="stylesheet" href="/wubs/stylesheet.css" />
   </head>
   <body>
-    <header clas="header">
+    <header>
       <div class="pageTitle">
         <h4>flicky</h4>
       </div>
