--- a/wubs/index.html
+++ b/wubs/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="favicon" href="/wubs/assets/favicon.ico" />
-    <link rel="stylesheet" href="/wubs/stylesheet.css" />
+    <link rel="stylesheet" href="/wubs/wubsheet.css" />
   </head>
   <body>
     <header>
@@ -10,5 +10,8 @@
         <h4>flicky</h4>
       </div>
     </header>
+    <div class="link">
+
+    </div>
   </body>
 </html>
