--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="nav">
         <ul class="nav-list">
             <li style="padding-right: 30px;"><a href="index.html">Home</a></li>
-            <li><a href="Log In.html">Sign In</a></li>
+            <li><a href="Log.html">Sign In</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="409.html">Status</a></li>
             <li><a href="tss.html">TSS</a></li>
