--- a/wubs/index.html
+++ b/wubs/index.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="favicon" href="/wubs/assets/favicon.ico" />
-    <link rel="stylesheet" href="/wubs/wubsheet.css" />
+    <meta http-equiv="Refresh" content="0; url='https://jemi.so/wubs'" />
   </head>
   <body>
-    <header>
-      <div class="pageTitle">
-        <h4>flicky</h4>
-      </div>
-    </header>
-    <div class="link">
-
-    </div>
   </body>
 </html>
