--- a/home/index.html
+++ b/home/index.html
@@ -6,7 +6,7 @@
     <title>
         WAFFLE Labs
     </title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap" rel="stylesheet">
@@ -16,8 +16,8 @@
     <div class="nav">
         <ul class="nav-list">
             <li style="padding-right: 30px;"><a href="index.html">Home</a></li>
-            <li><a href="Log.html">Sign In</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="/login/">Sign In</a></li>
+            <li><a href="/pages/blog/">Blog</a></li>
             <li><a href="409.html">Status</a></li>
             <li><a href="https://youtube.com/shorts/KVqG55Zg2CE">JJ</a></li>
             <li><a href="https://www.youtube.com/playlist?list=PLTzuaigeJL4ycboj8EER0r5HntEqudiHM">Archive</a></li>
