--- a/home/index.html
+++ b/home/index.html
@@ -16,8 +16,8 @@
     <div class="nav">
         <ul class="nav-list">
             <li style="padding-right: 30px;"><a href="/index.html">Home</a></li>
-            <li><a href="/login/index.html">Sign In</a></li>
-            <li><a href="/pages/blog/index.html">Blog</a></li>
+            <li><a href="/login/">Sign In</a></li>
+            <li><a href="/pages/blog/">Blog</a></li>
             <li><a href="409.html">Status</a></li>
             <li><a href="https://youtube.com/shorts/KVqG55Zg2CE">JJ</a></li>
             <li><a href="https://www.youtube.com/playlist?list=PLTzuaigeJL4ycboj8EER0r5HntEqudiHM">Archive</a></li>
@@ -31,7 +31,7 @@
     <div class="content">
         <p>
             Use the buttons on the navigation bar to access our re-directory system. For business inquries, please
-            contact us at waffleinq@gmail.com.
+            contact us at <a href="mailto:waffleinq@gmail.com">waffleinq@gmail.com</a>.
         </p>
 
     </div>
