--- a/409.html
+++ b/409.html
@@ -16,8 +16,8 @@
         <div class="nav">
             <ul class="nav-list">
                 <li style="padding-right: 30px;"><a href="index.html">Home</a></li>
-                <li><a href="/login/">Sign In</a></li>
-                <li><a href="/pages/blog/">Blog</a></li>
+                <li><a href="login.html">Sign In</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="409.html">Status</a></li>
                 <li><a href="tss.html">TSS</a></li>
                 <li><a href="https://youtube.com/shorts/KVqG55Zg2CE">JJ</a></li>
