Revert "file management"
This reverts commit 6fae73e9dbe557e4fbd011b0219a0c3b587ab3f8.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Refresh" content="0; url='https://wafflelabs.org/home'" />
-  </head>
-  <body>
-  </body>
+<!--  -->
+
+<head>
+    <title>
+        WAFFLE Labs
+    </title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div class="nav">
+        <ul class="nav-list">
+            <li style="padding-right: 30px;"><a href="index.html">Home</a></li>
+            <li><a href="Log.html">Sign In</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="409.html">Status</a></li>
+            <li><a href="https://youtube.com/shorts/KVqG55Zg2CE">JJ</a></li>
+            <li><a href="https://www.youtube.com/playlist?list=PLTzuaigeJL4ycboj8EER0r5HntEqudiHM">Archive</a></li>
+        </ul>
+    </div>
+
+
+    <h1>
+        Welcome to WAFFLE Labs
+    </h1>
+    <div class="content">
+        <p>
+            Use the buttons on the navigation bar to access our re-directory system. For business inquries, please
+            contact us at waffleinq@gmail.com.
+        </p>
+
+    </div>
+
+</body>
+
 </html>
