--- a/wubs/index.html
+++ b/wubs/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url='https://jemi.so/wubs'" />
+    <meta http-equiv="Refresh" content="0; url='https://linktr.ee/flickysound'" />
   </head>
   <body>
   </body>
