--- a/index.html
+++ b/index.html
@@ -3,39 +3,30 @@
 <!--  -->
 
 <head>
-    <title>
-        WAFFLE Labs
-    </title>
+    <title>WAFFLE Labs</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap" >
 </head>
 
 <body>
     <div class="nav">
         <ul class="nav-list">
-            <li style="padding-right: 30px;"><a href="index.html">Home</a></li>
-            <li><a href="Log.html">Sign In</a></li>
+            <li style="padding-right: 30px;"><a href="index.html"><object data="images/home.svg" type="image/svg+xml" scale="10%"></object></a></li>
+            <li><a href="Log.html" >Sign In</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="409.html">Status</a></li>
             <li><a href="https://youtube.com/shorts/KVqG55Zg2CE">JJ</a></li>
             <li><a href="https://www.youtube.com/playlist?list=PLTzuaigeJL4ycboj8EER0r5HntEqudiHM">Archive</a></li>
         </ul>
     </div>
-
-
-    <h1>
-        Welcome to WAFFLE Labs
-    </h1>
+        <h1>Welcome to WAFFLE Labs</h1>
     <div class="content">
-        <p>
-            Use the buttons on the navigation bar to access our re-directory system. For business inquries, please
-            contact us at waffleinq@gmail.com.
+        <p>Use the buttons on the navigation bar to access our re-directory system. <br/>
+            For business inquries, please <a href="mailto:waffleinq@gmail.com">contact us</a>.
         </p>
 
-    </div>
-
+     </div>
 </body>
-
 </html>
