--- a/wubs/index.html
+++ b/wubs/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Refresh" content="0; url='https://web.flickysound.repl.co'" />
+		<meta http-equiv="Refresh" content="0; url='https://flickysound.github.io'" />
 	</head>
 	<body width="100%" height="100%" fill="#000000">
 		<p>text</p>
