removed flicky added 404 page

--- a/409.html
+++ b/409.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="status.css">
+    <link rel="stylesheet" href="style.css">
 
 
     <title> Status </title>
