--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
             background-size: cover;
         }
     </style>
-    <title> Status </title>
+    <title>File not found.</title>
 
     </style>
 </head>
