--- a/409.html
+++ b/409.html
@@ -15,11 +15,10 @@
     <body>
         <div class="nav">
             <ul class="nav-list">
-                <li style="padding-right: 30px;"><a href="index.html">Home</a></li>
-                <li><a href="login.html">Sign In</a></li>
+                <li style="padding-right: 30px;"><a href="index.html"><object data="images/home.svg" type="image/svg+xml" scale="10%"></object></a></li>
+                <li><a href="Log.html" >Sign In</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="409.html">Status</a></li>
-                <li><a href="tss.html">TSS</a></li>
                 <li><a href="https://youtube.com/shorts/KVqG55Zg2CE">JJ</a></li>
                 <li><a href="https://www.youtube.com/playlist?list=PLTzuaigeJL4ycboj8EER0r5HntEqudiHM">Archive</a></li>
             </ul>
