--- a/login copy.html
+++ b/login copy.html
@@ -21,7 +21,7 @@
     <!-- chicory-tangerine-rz4c -->
     <base href="">
     <meta charset="utf-8">
-    <title>UNIVERAL WAFFLE GATEWA</title>
+    <title>UNIVERAL WAFFLE GATEWAY</title>
     <link rel="shortcut icon" type="image/x-icon"
         href="https://images.squarespace-cdn.com/content/v1/624c5216a92ce329da3cfc84/1911eb35-b37c-4d31-96ad-e62f458bacc2/favicon.ico?format=100w">
 
