--- a/409.html
+++ b/409.html
@@ -25,7 +25,7 @@
         </div>
         <h1>503 Service Unavailable</h1>
         <h2> The server is currently unable to handle the request due to active maintenance. </h2>
-        <h1>Status: We are on phase 1 of full release. </h1>
+        <h1>Status: We are on phase [NUMBER] of full release. </h1>
             <h3>For questions or concerns, contact us at <a href="mailto:waffleinq@gmail.com">waffleinq@gmail.com</a></h3>
 </body>
 
