--- a/flyer/index.html
+++ b/flyer/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="refresh" content="0; url=$https://studio.code.org/projects/gamelab/eiaTsH-41Af26JtVdSPxsFbGmiLnrzZkkzgt-Hlpz6I">
+        <meta http-equiv="refresh" content="0; url=https://studio.code.org/projects/gamelab/eiaTsH-41Af26JtVdSPxsFbGmiLnrzZkkzgt-Hlpz6I">
     </head>
     <body>
 
